<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout_bg"
        android:background="@drawable/layout_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_250">
        <TextView
            android:text="@string/welCome"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_margin="@dimen/dp_30"
        android:layout_below="@id/linearLayout_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:inputType="number"
        android:hint="@string/mobileNumber"
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/etmobileNumberLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/passWord"
        android:inputType="textPassword"
        android:layout_below="@+id/etmobileNumberLogin"
        android:id="@+id/etPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <CheckBox
            android:padding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_below="@+id/etPasswordLogin"
            android:id="@+id/checkBox"
            android:text="Remember me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_below="@id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Button
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/blueColor"
        android:layout_weight="1"
        android:text="@string/LogIn"
        android:layout_below="@id/etPasswordLogin"
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvsignUp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/SignUp"
            android:textColor="@color/blueColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
      </LinearLayout>
    </RelativeLayout>

</RelativeLayout>